source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
.preloadingBlockWrapper {
  align-items: center;
  display: flex;
  flex: 1;
  justify-content: center;
  min-height: 44px;

  :global {
    .LoadingSpinner_component {
      margin: 0;
    }
  }
}

.tiles {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(auto-fill, 80px);
  justify-content: space-between;
}

.list {
  &:focus {
    outline: 0;
  }
}

